tests/ui/coherence/coherence-pair-covered-uncovered.stderr
error[E0119]: conflicting implementations of trait `Remote` for type `Pair<Local<_>, RemoteStruct>`
  --> $DIR/coherence-pair-covered-uncovered.rs:8:1
   |
LL | impl<T,U> Remote for Pair<Local<U>, T> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `coherence_concrete_lib`:
           - impl<T> Remote for Pair<T, RemoteStruct>;

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
